--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
+
+.header {
   text-align: center;
+  padding: 20px;
+  background-color: #333;
+  color: #fff;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.buttons {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.row {
+  display: flex;
+  justify-content: center;
+  margin-left: 20px;
+}
+
+.display {
+  width: 240px;
+  height: 60px;
+  background-color: #ddd;
+  color: #333;
+  font-size: 2em;
+  padding: 10px;
+  margin: 10px 0px 10px 20px;
+  border-radius: 8px;
+  text-align: center;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  box-shadow: insert 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  width: 60px;
+  height: 60px;
+  font-size: 24px;
+  margin: 5px;
+  cursor: pointer;
 }
